fix: font-weighton small screens landing>hero

--- a/components/Landing/Hero/hero.scss
+++ b/components/Landing/Hero/hero.scss
@@ -25,14 +25,18 @@
   }
 
   &__heading {
-    margin-right: 8rem;
+    margin-right: 4rem;
+    font-weight: bold;
+
+    @include widerThan1200 {
+      margin-right: 8rem;
+    }
   }
 
   h4,
   h3,
   h2 {
     line-height: 1.3;
-    font-weight: 400;
     color: var(--white);
   }
 
@@ -55,16 +59,12 @@
   &__highlight {
     display: inline-block;
     background-image: var(--accent-gradient-vertical-reverse);
-    font-weight: 500;
+    font-weight: bold;
     color: var(--black);
     margin: 0.25em 0;
     padding: 0 var(--padding-300);
     width: max-content;
     border-radius: 0.25em;
-
-    @include widerThan768 {
-      font-weight: bold;
-    }
   }
 
   &__cta {
